[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia-Kalashnikova",email = "144282173+Natalia-Kalashnikova@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.13.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
